ref to first project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <nav> 
         <h1>Coding Projects</h1>  
     <ol type="1">
-        <li>Lab 1-HTML Review and Git Hosting<br></li>
+        <a ref= "https://tolechowski1.github.io/PortfolioProject/"</a> 
+            <li>Lab 1-HTML Review and Git Hosting<br></li>
         <li>Lab 2-Number Tricks<br></li>
         <li>Lab 3-Number Tricks Enhanced<br></li>
         <li>Lab 4-Madlibs<br></li>
