--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav> 
         <h1>Coding Projects</h1>  
     <ol type="1">
-        <li><a ref= "https://tolechowski1.github.io/PortfolioProject/"</a> 
-        Lab 1-HTML Review and Git Hosting<br></li>
+        <li><a href= "https://tolechowski1.github.io/PortfolioProject/"> 
+        Lab 1-HTML Review and Git Hosting<br></a></li>
         <li>Lab 2-Number Tricks<br></li>
         <li>Lab 3-Number Tricks Enhanced<br></li>
         <li>Lab 4-Madlibs<br></li>
