--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <ol type="1">
         <li><a href= "https://tolechowski1.github.io/PortfolioProject/"> 
         Lab 1-HTML Review and Git Hosting<br></a></li>
-        <li><a href="https://tolechowski1.github.io/Lab3/".
-            Lab 2-Number Tricks<br></li>a></li>
+        <li><a href="https://tolechowski1.github.io/Lab3/">
+            Lab 2-Number Tricks<br></a></li>
         <li>Lab 3-Number Tricks Enhanced<br></li>
         <li>Lab 4-Madlibs<br></li>
         <li>Lab 5-Debugging<br></li>
