--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <li>Lab 9-Monster Mash<br></li>
         <li>Lab 10-Account Creation Form Validation<br></li>
         <li>Lab 11-Alien Sighting form<br></li>
+        <li><a href="https://tolechowski1.github.io/Lab3b_2.2/">
+            Lab 3b-Test Scores<br></a></li>
     </ol>
     </nav>
     </main>
