--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         Lab 1-HTML Review and Git Hosting<br></a></li>
         <li><a href="https://tolechowski1.github.io/Lab3/">
             Lab 2-Number Tricks<br></a></li>
-        <li>Lab 3-Number Tricks Enhanced<br></li>
+        <li><a href="https://tolechowski1.github.io/Lab3b_2.2/">
+            Lab 3-Number Tricks Enhanced<br></a></li>
         <li>Lab 4-Madlibs<br></li>
         <li>Lab 5-Debugging<br></li>
         <li>Lab 6-Test Score App<br></li>
