--- a/PortfolioProject/index.html
+++ b/PortfolioProject/index.html
@@ -13,11 +13,12 @@
     <nav> 
         <h1>Coding Projects</h1>  
     <ol type="1">
-        <li><a href= "https://tolechowski1.github.io/PortfolioProject/"> 
+        <li><a href= "https://tolechowski1.github.io/Lab1redo/"> 
         Lab 1-HTML Review and Git Hosting<br></a></li>
         <li><a href="https://tolechowski1.github.io/Lab3/".
             Lab 2-Number Tricks<br></li>a></li>
-        <li>Lab 3-Number Tricks Enhanced<br></li>
+        <li><a href=""
+            Lab 3-Number Tricks Enhanced<br></li>
         <li>Lab 4-Madlibs<br></li>
         <li>Lab 5-Debugging<br></li>
         <li>Lab 6-Test Score App<br></li>
