--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav> 
         <h1>Coding Projects</h1>  
     <ol type="1">
-        <li><a href= "https://tolechowski1.github.io/PortfolioProject/"> 
+        <li><a href= "https://tolechowski1.github.io/Lab1redo/"> 
         Lab 1-HTML Review and Git Hosting<br></a></li>
         <li><a href="https://tolechowski1.github.io/Lab3/">
             Lab 2-Number Tricks<br></a></li>
