--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <li><a href="https://tolechowski1.github.io/Lab3b_2.2/">
             Lab 3-Number Tricks Enhanced<br></a></li>
         <li>Lab 4-Madlibs<br></li>
-        <li>Lab 5-Debugging<br></li>
+        <li><a href="https://tolechowski1.github.io/Debugging/">
+            Lab 5-Debugging<br></a></li>
         <li>Lab 6-Test Score App<br></li>
         <li>Lab 7-Super Hero Cycling Banners<br></li>
         <li>Lab 8-The changing Caterpillar<br></li>
