--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <li>Lab 4-Madlibs<br></li>
         <li><a href="https://tolechowski1.github.io/Debugging/">
             Lab 5-Debugging<br></a></li>
-        <li>Lab 6-Test Score App<br></li>
+        <li><a href="https://tolechowski1.github.io/lab6testscores/">
+            Lab 6-Test Score App<br></a></li>
         <li>Lab 7-Super Hero Cycling Banners<br></li>
         <li>Lab 8-The changing Caterpillar<br></li>
         <li>Lab 9-Monster Mash<br></li>
