--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             Lab 2-Number Tricks<br></a></li>
         <li><a href="https://tolechowski1.github.io/Lab3b_2.2/">
             Lab 3-Number Tricks Enhanced<br></a></li>
-        <li>Lab 4-Madlibs<br></li>
+        <li><a href="https://tolechowski1.github.io/MadLibs/">
+            Lab 4-Madlibs<br></a></li>
         <li><a href="https://tolechowski1.github.io/Debugging/">
             Lab 5-Debugging<br></a></li>
         <li><a href="https://tolechowski1.github.io/lab6testscores/">
@@ -31,6 +32,8 @@
         <li>Lab 11-Alien Sighting form<br></li>
         <li><a href="https://tolechowski1.github.io/Lab3b_2.2/">
             Lab 3b-Test Scores<br></a></li>
+            <li><a href="https://tolechowski1.github.io/testScoresValidate/">
+                Lab 7b- Test Scores Validation<br></a></li>    
     </ol>
     </nav>
     </main>
