--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             Lab 5-Debugging<br></a></li>
         <li><a href="https://tolechowski1.github.io/lab6testscores/">
             Lab 6-Test Score App<br></a></li>
-        <li>Lab 7-Super Hero Cycling Banners<br></li>
+        <li><a href="https://tolechowski1.github.io/superHeroBanner/">
+            Lab 7-Super Hero Cycling Banners<br></a></li>
         <li>Lab 8-The changing Caterpillar<br></li>
         <li>Lab 9-Monster Mash<br></li>
         <li>Lab 10-Account Creation Form Validation<br></li>
