--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <li>Lab 11-Alien Sighting form<br></li>
         <li><a href="https://tolechowski1.github.io/Lab3b_2.2/">
             Lab 3b-Test Scores<br></a></li>
+            <li><a href=" https://tolechowski1.github.io/emailrevisited/">
+                Lab 6b-Email Form Revisited<br></a></li>    
         <li><a href="https://tolechowski1.github.io/testScoresValidate/">
             Lab 7b- Test Scores Validation<br></a></li>    
     </ol>
