--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             Lab 6-Test Score App<br></a></li>
         <li><a href="https://tolechowski1.github.io/superHeroBanner/">
             Lab 7-Super Hero Cycling Banners<br></a></li>
-        <li>Lab 8-The changing Caterpillar<br></li>
+        <li><a href="https://tolechowski1.github.io/caterpillarStarter/">
+            Lab 8-The changing Caterpillar<br></a></li>
         <li>Lab 9-Monster Mash<br></li>
         <li>Lab 10-Account Creation Form Validation<br></li>
         <li>Lab 11-Alien Sighting form<br></li>
