--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             Lab 7-Super Hero Cycling Banners<br></a></li>
         <li><a href="https://tolechowski1.github.io/caterpillarStarter/">
             Lab 8-The changing Caterpillar<br></a></li>
-        <li>Lab 9-Monster Mash<br></li>
+        <li><a href="https://tolechowski1.github.io/MonsterMash/"
+            Lab 9-Monster Mash<br></a></li>
         <li><a href="https://tolechowski1.github.io/newAccountRegistrationForm/">
             Lab 10-Account Creation Form Validation<br></a></li>
         <li>Lab 11-Alien Sighting form<br></li>
